# crypto-stop-loss-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  myfile.xlsx  pyproject.toml  run_research.sh
.db/: crypto-stop-loss-bot.sqlite
.github/workflows/: common.yml  main.yml  non-main-ci.yml
backend/: .env.example  .gitignore  pyproject.toml
backend/src/crypto_trailing_stop/: config.py  main.py
backend/src/crypto_trailing_stop/commons/: constants.py
backend/src/crypto_trailing_stop/infrastructure/adapters/dtos/: bit2me_account_info_dto.py  bit2me_order_dto.py  bit2me_tickers_dto.py
backend/src/crypto_trailing_stop/infrastructure/adapters/remote/: base.py  bit2me_remote_service.py
backend/src/crypto_trailing_stop/infrastructure/services/: __init__.py  global_summary_service.py  session_storage_service.py
backend/src/crypto_trailing_stop/infrastructure/services/enums/: __init__.py  session_keys_enum.py
backend/src/crypto_trailing_stop/infrastructure/services/remote/: base.py  bit2me_remote_service.py
backend/src/crypto_trailing_stop/infrastructure/services/vo/: global_summary.py
backend/src/crypto_trailing_stop/infrastructure/tasks/: base.py  task_manager.py  trailing_stop_lost_task_service.py
backend/src/crypto_trailing_stop/interfaces/controllers/: health_controller.py  login_controller.py
backend/src/crypto_trailing_stop/interfaces/dtos/: health_status.py  login_dto.py
backend/src/crypto_trailing_stop/interfaces/telegram/: keyboards_builder.py  start.py
backend/src/crypto_trailing_stop/interfaces/telegram/callbacks/: get_global_summary.py  logout.py  set_stop_loss_percentage.py
backend/src/crypto_trailing_stop/interfaces/telegram/commands/: start.py
backend/src/crypto_trailing_stop/interfaces/telegram/services/: telegram_service.py
backend/tests/: conftest.py
backend/tests/helpers/: constants.py
backend/tests/helpers/httpserver_pytest/: __init__.py  request_matchers.py
backend/tests/helpers/object_mothers/: bit2me_order_dto_object_mother.py
backend/tests/integration_tests/: trailing_stop_lost_task_service_test.py
src/crypto_trailing_stop/: config.py  main.py
src/crypto_trailing_stop/commons/: constants.py  patterns.py  utils.py
src/crypto_trailing_stop/config/: application_container.py  configuration_properties.py  dependencies.py
src/crypto_trailing_stop/domain/entities/: flag_name_enum.py
src/crypto_trailing_stop/infrastructure/: exceptions.py
src/crypto_trailing_stop/infrastructure/config/: infrastructure_container.py
src/crypto_trailing_stop/infrastructure/database/: __init__.py  engine.py
src/crypto_trailing_stop/infrastructure/services/: __init__.py  auto_buy_trader_config_service.py  auto_entry_trader_event_handler_service.py  buy_sell_signals_config_service.py  crypto_analytics_service.py  favourite_crypto_currency_service.py  gemini_generative_ai_service.py  global_flag_service.py  global_summary_service.py  limit_sell_order_guard_cache_service.py  market_signal_service.py  orders_analytics_service.py  push_notification_service.py  risk_management_service.py  session_storage_service.py  stop_loss_percent_service.py  trade_now_hints_service.py
src/crypto_trailing_stop/infrastructure/tasks/: __init__.py  base.py  buy_sell_signals_task_service.py  global_flag_checker_task_service.py  limit_sell_order_guard_task_service.py  task_manager.py  trailing_stop_loss_task_service.py  trailing_stop_lost_task_service.py
src/crypto_trailing_stop/interfaces/config/: interfaces_container.py
src/crypto_trailing_stop/interfaces/controllers/: health_controller.py  login_controller.py
src/crypto_trailing_stop/interfaces/dtos/: health_status_dto.py  login_dto.py
src/crypto_trailing_stop/interfaces/telegram/: exception_utils.py  keyboards_builder.py  messages_formatter.py
src/crypto_trailing_stop/scripts/: .env.backtesting  cli.py  constants.py  jobs.py  main.py  serde.py  services.py  strategy.py  utils.py  vo.py
tests/: conftest.py
tests/helpers/: background_jobs_test_utils.py  constants.py  enums.py  favourite_crypto_currencies_test_utils.py  market_config_test_utils.py  market_config_utils.py  ohlcv_test_utils.py  operating_exchange_utils.py  sell_orders_test_utils.py
tests/helpers/httpserver_pytest/: __init__.py  query_matchers.py  request_matchers.py
tests/helpers/httpserver_pytest/request_matchers/: __init__.py  bit2me_api_request_matcher.py  mexc_api_request_matcher.py  mexc_contract_request_matcher.py
tests/helpers/httpserver_pytest/utils/: __init__.py  account_info_mock.py  fetch_ohlcv_mock.py  (+6 more)
tests/helpers/object_mothers/: __init__.py  bit2me_order_dto_object_mother.py  bit2me_summary_xlsx_object_mother.py  bit2me_tickers_dto_object_mother.py  bit2me_trade_dto_object_mother.py  bit2me_trading_wallet_balance_dto_object_mother.py  mexc_account_balance_dto_object_mother.py  mexc_account_info_dto_object_mother.py  mexc_order_dto_object_mother.py  mexc_ticker_price_and_book_dto_object_mother.py  mexc_trade_dto_object_mother.py  signals_evaluation_result_object_mother.py
tests/integration_tests/: buy_sell_signals_task_service_test.py  global_summary_service_test.py  limit_sell_order_guard_task_service_test.py  trailing_stop_loss_task_service_test.py  trailing_stop_lost_task_service_test.py
tests/integration_tests/services/: auto_buy_trader_config_service_test.py  auto_entry_trader_event_handler_service_test.py  buy_sell_signals_config_service_test.py  crypto_analytics_service_test.py  favourite_crypto_currency_service_test.py  global_flag_service_test.py  global_summary_service_test.py  market_signal_service_test.py  orders_analytics_service_test.py  push_notification_service_test.py  risk_management_service_test.py  stop_loss_percent_service_test.py  trade_now_hints_service_test.py
tests/integration_tests/tasks/: buy_sell_signals_task_service_test.py  limit_sell_order_guard_task_service_test.py  trailing_stop_loss_task_service_test.py
tests/unit_tests/services/: session_storage_service_test.py
(+169 files in other folders)
