[project]
name = "crypto-trailing-stop"
version = "0.44.0"
description = "A Python-based bot for automated cryptocurrency trading"
readme = "README.md"
authors = [
    { name = "José María Sola Durán", email = "josemaria.sola.duran@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiogram3-form>=2.0.5",
    "apscheduler>=3.11.0",
    "authlib>=1.6.0",
    "backoff>=2.2.1",
    "cachebox>=5.0.1",
    "ccxt>=4.4.94",
    "fastapi>=0.115.12",
    "fastapi-cli>=0.0.7",
    "google-genai>=1.30.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "mako>=1.3.10",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "piccolo[sqlite]>=1.27.1",
    "pydantic-settings>=2.8.1",
    "pydash>=8.0.5",
    "pyee>=13.0.0",
    "ta>=0.11.0",
    "tomli>=2.2.1",
    "uvicorn>=0.34.0",
]

[tool.taskipy.tasks]
start = "fastapi dev src/crypto_trailing_stop/main.py --app app --reload --host 0.0.0.0"
test = "pytest -x --log-cli-level=INFO"
"test:coverage" = "pytest --cov=./src --cov-report=term --cov-report=xml --log-cli-level=INFO"
"test:coverage:html" = "pytest --cov=./src --cov-report=term --cov-report=html --log-cli-level=INFO"
lint = "pre-commit install && pre-commit run --all"


[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "backtesting>=0.6.5",
    "faker>=37.1.0",
    "fastparquet>=2024.11.0",
    "joblib>=1.5.1",
    "pre-commit>=4.2.0",
    "pyarrow>=21.0.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.2.1",
    "pytest-httpserver>=1.1.3",
    "python-dotenv>=1.1.0",
    "taskipy>=1.14.1",
    "testcontainers>=4.10.0",
    "tqdm>=4.67.1",
    "typer>=0.15.2",
]

[project.scripts]
cli = "crypto_trailing_stop.scripts.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "I",   # isort
    "UP",  # pyupgrade
    "E501", # Add the `line-too-long` rule to the enforced rule set.
    "T201" # Remove print statements
]
ignore = ["UP038"]

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 10.
max-complexity = 10

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
log_cli_level = "INFO"
asyncio_mode = "auto"
python_functions = "should_* test_*"

[tool.coverage.run]
source = ["src"]
omit = [
    "src/crypto_trailing_stop/scripts/*",
    "src/crypto_trailing_stop/interfaces/telegram/*"
]
branch = false
concurrency = ["thread", "multiprocessing"]

[tool.coverage.report]
show_missing = true
fail_under = 90
